add "Tab" navigation provider

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Narik Devextreme Starter</title>
+  <title>Narik Devextreme Demo</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
